--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "publish": "git add . && git commit -m \"update\" && git push && npm run deploy"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
